tests/should_fail/type_tuple_wordform_wrong_count.nv
module main

// SHOULD FAIL: Tuple word form with wrong number of elements
let t: Tuple(Int, String) = (1, "two", true)
